Fixed flex issue
[Fixed] Flipping-card-flex overlapping issue #4

--- a/css/style.css
+++ b/css/style.css
@@ -154,8 +154,8 @@ th{
 }
 
 .back {
-	/* width: 250px;
-  height: 330px; */
+	/* width: 250px;*/
+  min-height: 330px;
   -webkit-transform: rotateY(-180deg);
   background: white;
 	overflow: scroll;
